src/components/Main/Navbar.module.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap');

.navbar{
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    height: 8%;
    width: 40%;
    background-color: #a09f9f54;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.navbar-dark{
    background-color: #2a2d2f75;
}

ul{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

li{
    padding: 10px;
    list-style-type: none;
}

.nav-btn{
    cursor: pointer;
    background: none;
    padding: 10px;
    font-size: 1.35rem;
    font-weight: 900;
    color: white;
    border: none;
    border-radius: 10px;
    font-family: 'JetBrains Mono', monospace;
}

.nav-btn-dark{
    color: #ffffffde;
}

.selected{
    color: white;
    background-color: #bdbdbd97;
}

.selected-dark{
    color: #ffffffde;
    background-color: #6c6c6c97;
}

.nav-btn:hover{
    color: white;
    background-color: #bdbdbd97;
}

.nav-btn-dark:hover{
    color: #ffffffde;
    background-color: #6c6c6c97;
}

.link{
    color: white;
    background-color: transparent;
    text-decoration: none;
}

.link:hover{
    color: white;
    background-color: transparent;
}

.link:visited{
    color: white;
    background-color: transparent;
}

.link-dark{
    color: #ffffffde;
}

.link-dark:hover{
    color: #ffffffde;
    background-color: transparent;
}

.link-dark:visited{
    color: #ffffffde;
    background-color: transparent;
}

.theme-btn{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.theme-btn button{
    cursor: pointer;
    background: transparent;
    border: none;
}

.theme-btn img{
    height: 40px;
    width: 40px;
}

